--- a/Project_4_Gallery_Project/src/index.css
+++ b/Project_4_Gallery_Project/src/index.css
@@ -1,7 +1,4 @@
-@import "tailwindcss/base";
-@import "tailwindcss/components";
-@import "tailwindcss/utilities";
-
+@import "tailwindcss";
 .scrollbar-hide::-webkit-scrollbar {
     display: none;
 }
